<resources>
    <string name="app_name">Muallimi Soniy</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Muallimi Soniy</string>
     <string name="rules_text">Tajvid saboqlarini o\'rganishlik uchun, avval harflarni chiroyli o\'qimoq va har bir harfni joy joyidan chiqarishni uddalamoq kerak. Undan keyin Tajvid saboqlari qismiga o\'tib berilgan so\'zlarning talaffuziga e\'tiborli bo\'lib hamda  qoidalrni yodda tutib asta sekinlik  bilan o\'zlashtirish lozim. </string>
    <string name="rules">Yo\'riqnoma</string>
    <string name="about">Ilova haqida</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="search">Search</string>
    <string name="something">Something</string>
    <string name="_1_pora_qur_on">Qur\'ondan suralar</string>
    <string name="tajvid_ilmi">Tajvid saboqlari</string>
    <string name="alifbo">Alifbo</string>
    <string name="muallimi_soniy_1892">معلمثانى ١٨٩٢</string>
    <string name="harflar">Harflar</string>
    <string name="bismillah">بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</string>
    <string name="mad_1_descr">Yuqoridagi darsni diqqat bilan o\'rganing. Zero bu darsni puhta o\'zlashtirish keyingi darslarni o\'rganish uchun poydevordir.</string>
    <string-array name="madlar">
        <item>اٰ    اٖى    اُو</item>
        <item>بٰا    بٖى    بُو</item>
        <item>تٰا    تٖى    تُو</item>
        <item>ثٰا    ثٖى    ثُو</item>
        <item>جٰا    جٖى    جُو</item>
        <item>حٰا    حٖى    حُو</item>
        <item>خٰا    خٖى    خُو</item>
        <item>دٰا    دٖى    دُو</item>
        <item>ذٰا    ذٖى    ذُو</item>
        <item>رٰا    رٖى    رُو</item>
        <item>زٰا    زٖى    زُو</item>
        <item>زٰا    زٖى    زُو</item>
        <item>سٰا    سٖى    سُو</item>
        <item>شٰا    شٖى    شُو</item>
        <item>صٰا    صٖى    صُو</item>
        <item>ضٰا    ضٖى    ضُو</item>
        <item>طٰا    طٖى    طُو</item>
        <item>ظٰا    ظٖى    ظُو</item>
        <item>عٰا    عٖى    عُو</item>
        <item>غٰا    غٖى    غُو</item>
        <item>فٰا    فٖى    فُو</item>
        <item>قٰا    قٖى    قُو</item>
        <item>كٰا    كٖى    كُو</item>
        <item>لٰا    لٖى    لُو</item>
        <item>مٰا    مٖى    مُو</item>
        <item>نٰا    نٖى    نُو</item>
        <item>وٰا    وٖى    وُو</item>
        <item>هٰا    هٖى    هُو</item>

        <item>بُو    يٖى    بٰا</item>
        <item>يُو    بٰٖى    يٰا</item>
        <item>تُو    هٖى    تٰا</item>
        <item>هُو    تٖى    هٰا</item>
        <item>ثُو    وٖى    ثٰا</item>
        <item>وُو    ثٖى    وٰا</item>
        <item>جُو    نٖى    جٰا</item>
        <item>نُو    جٖى    نٰا</item>
        <item>حُو    مٖى    حٰا</item>
        <item>مُو    حٖى    مٰا</item>
        <item>خُو    لٖى    خٰا</item>
        <item> لُو    خٖى     لٰا</item>
        <item>دُو    كٖى    دٰا</item>
        <item> كُو    دٖى    كٰا</item>
        <item> ذُو    قٖى    ذٰا</item>
        <item>قُو    ذٖى    قٰا</item>
        <item> رُو    فٖى    رٰا</item>
        <item>فُو    رٖى    فٰا</item>
        <item>زُو    غٖى    زٰا</item>
        <item>غُو    زٖى    غٰا</item>
        <item>سُو    عٖى    سٰا</item>
        <item>عُو    سٖى    عٰا</item>
        <item>شُو    ظٖى    شٰا</item>
        <item>ظُو    شٖى    ظٰا</item>
        <item>صُو    طٖى    صٰا</item>
        <item>طُو    صٖى    طٰا</item>
        <item>ضُو    اٖى    ضٰا</item>


    </string-array>
    <string name="madlar_2">
مٰالْ \u0020\u0020\u0020  حٰالْ   \u0020\u0020\u0020   نٰارْ   \u0020\u0020\u0020  جٖاهْ   \u0020\u0020\u0020  شٰامْ  \u0020\u0020\u0020    سٰامْ   \u0020\u0020\u0020   بٰارٖى   \u0020\u0020\u0020   عٰالٖى  \u0020\u0020\u0020   رٰاضٖى   \u0020\u0020\u0020  قٰاضٖى  \u0020\u0020\u0020   هٰادٖى  \u0020\u0020\u0020   حٰالٖى  \u0020\u0020\u0020  كَلٰامْ   \u0020\u0020\u0020  سَلٰامْ   \u0020\u0020\u0020  حَلٰالْ  \u0020\u0020\u0020  حَرٰامْ  \u0020\u0020\u0020   جَلٰالْ  \u0020\u0020\u0020   جَمٰالْ  \u0020\u0020\u0020  كَمٰالْ  \u0020\u0020\u0020   اِمٰامْ  \u0020\u0020\u0020  حٖسٰابْ  \u0020\u0020\u0020    نِظٰامْ   \u0020\u0020\u0020  غُرٰابْ   \u0020\u0020\u0020  غُلٰامْ  \u0020\u0020\u0020   غُبٰارْ  \u0020\u0020\u0020   تُرٰابْ  \u0020\u0020\u0020   اَمْوٰالْ  \u0020\u0020\u0020   اَحْوٰالْ   \u0020\u0020\u0020  اَعْمٰالْ   \u0020\u0020\u0020  اَعْلٰامْ   \u0020\u0020\u0020  اَمْوٰاتْ  \u0020\u0020\u0020   اَمْرٰاضْ   \u0020\u0020\u0020  قَوٰاعِدْ  \u0020\u0020\u0020   عَوٰامِلْ   \u0020\u0020\u0020  شَوٰاهِدْ  \u0020\u0020\u0020  جَوٰاهِرْ   \u0020\u0020\u0020  كَوٰاكِبْ    \u0020\u0020\u0020  مَكٰاتِبْ  \u0020\u0020\u0020   اٖكْرٰامْ   \u0020\u0020\u0020  اِعْلٰامْ  \u0020\u0020\u0020  اِخْلٰاصْ   \u0020\u0020\u0020 اِظْهٰارْ  \u0020\u0020\u0020 اِصْلٰاحْ  \u0020\u0020\u0020  اِفْسٰادْ  \u0020\u0020\u0020  عٰالِمْ   \u0020\u0020\u0020  صٰابِرْ  \u0020\u0020\u0020   مٰاهِرْ  \u0020\u0020\u0020   طٰالِبْ   \u0020\u0020\u0020  فٰاتِحْ   \u0020\u0020\u0020  صٰالِحْ  \u0020\u0020\u0020  قٰامٰا   \u0020\u0020\u0020  طٰافٰا \u0020\u0020\u0020    تٰابٰا  \u0020\u0020\u0020   قُولٖى   \u0020\u0020\u0020  طُوفٖى  \u0020\u0020\u0020  تُوبٖى
 \n..............................\n
يُقٰالُ   \u0020\u0020\u0020  يُطٰافُ  \u0020\u0020\u0020    تُتٰابُ   \u0020\u0020\u0020   يَقُولُ\u0020\u0020\u0020 تَقُومُ\u0020\u0020\u0020   يَطُوفُ   \u0020\u0020\u0020  يَتُوبٰانِ   \u0020\u0020\u0020  يَقُولُونَ  \u0020\u0020\u0020   تَقُومُونَ  \u0020\u0020\u0020  يَطُوفُونَ \u0020\u0020\u0020   تَقُولُونَ  \u0020\u0020\u0020  يَنْصُورُونَ  \u0020\u0020\u0020    تَدْخُلُونَ  \u0020\u0020\u0020   يَعْلَمُونَ   \u0020\u0020\u0020  تَعْمَلُونَ   \u0020\u0020\u0020  يَشْهَدُونَ   \u0020\u0020\u0020   تَضْرِبُونَ  \u0020\u0020\u0020    يَرْجِعُونَ   \u0020\u0020\u0020  تَجْلِسُونَ  \u0020\u0020\u0020   يَكْرِمُونَ \u0020\u0020\u0020    تُسْلِمُونَ  \u0020\u0020\u0020  يُخْلِصُونَ  \u0020\u0020\u0020  تُكْرِمُونَ   \u0020\u0020\u0020  يُنْصَرُونَ  \u0020\u0020\u0020   تُضْرَبُونَ \u0020\u0020\u0020   يَجْتَمِعُونَ \u0020\u0020\u0020   تَكْتَسِبُونَ  \u0020\u0020\u0020  يَحْتَسِبُونَ  \u0020\u0020\u0020   تَسْتَشْهِدُونَ  \u0020\u0020\u0020   يَستَحْرِجُونَ
 \n..............................\n
اُشْكُرٰا   \u0020\u0020\u0020   اُنْصُرٰا   \u0020\u0020\u0020   اِعْلَمٰا   \u0020\u0020\u0020   اُشْكُرٖى  \u0020\u0020\u0020  اُنْصُرٖى   \u0020\u0020\u0020   اِعْلَمٖى  \u0020\u0020\u0020     مُكْرِمٰانِ  \u0020\u0020\u0020   مُسْلِمٰانِ   \u0020\u0020\u0020   مُخْلِصٰانِ  \u0020\u0020\u0020   مُنْفِقٰانَِ \u0020\u0020\u0020   مُكْرِمُونَ   \u0020\u0020\u0020  مُسْلِمُونَ  \u0020\u0020\u0020   مُخْلِسُونَ  \u0020\u0020\u0020   مُنْفِقُونَ   \u0020\u0020\u0020  مُسْلِمٰاتْ   \u0020\u0020\u0020  مُخْلِصٰاتْ   \u0020\u0020\u0020  مَنْصُورُونَ  \u0020\u0020\u0020  مَطْلُوبُونَ
 \n..............................\n
 يـ     ،      ـيـ     ـــ       ى   \n
مٖيلْ   \u0020\u0020\u0020  بٖيلْ    \u0020\u0020\u0020  فٖيلْ   \u0020\u0020\u0020  حٖينْ  \u0020\u0020\u0020   سٖينْ   \u0020\u0020\u0020  شٖينْ   \u0020\u0020\u0020   كَرٖيمْ   \u0020\u0020\u0020  عٰلٖيمْ  \u0020\u0020\u0020   سَمٖيعْ  \u0020\u0020\u0020   عَزٖيزْ \u0020\u0020\u0020   حَكٖيمْ   \u0020\u0020\u0020  مِسكٖينْ   \u0020\u0020\u0020   مِعْطٖيرْ  \u0020\u0020\u0020   عِفْرٖيتْ  \u0020\u0020\u0020  اِدْرٖيسْ  \u0020\u0020\u0020    تَعْلٖيمْ  \u0020\u0020\u0020   تَدْرٖيسْ  \u0020\u0020\u0020    تَبْرٖيكْ  \u0020\u0020\u0020    تَحْسٖينْ  \u0020\u0020\u0020    بٖيعَ  \u0020\u0020\u0020   مٖيلَ  \u0020\u0020\u0020  عٖيشَ  \u0020\u0020\u0020  يَبٖيعُ  \u0020\u0020\u0020   يَمٖيلُ  \u0020\u0020\u0020   تَعٖيشُ     \u0020\u0020\u0020  تَبٖيعٖينَ  \u0020\u0020\u0020    تَوٰارٖيخْ  \u0020\u0020\u0020    تَرٰاوٖيخْ   \u0020\u0020\u0020    مُكْرِمٖينَ    \u0020\u0020\u0020   مُسْلِمٖينَ      \n..............................
    </string>
    <string name="tashdid_text">Arab tilida ikki bir xil harf yonma yon kelib birinchisi sukunli, keyingisi harakatli bo\'lsa yozuvda ularning biri yozilib ustiga tashdid belgisi qo\'yiladi. Undosh o\'qilganda ikkilantirib (ikkita qilib) o\'qiladi. Ana shu ikkilantirish belgisi \'tashdid\' deyiladi. </string>
</resources>