<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.screens.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:background="#EDEEF0"
         android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:contentDescription="@string/something"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/mosque"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:background="@drawable/image_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            android:layout_height="0dp"
            android:contentDescription="@string/something" />




        <ImageView
            android:contentDescription="@string/something"
            android:layout_width="100dp"
            android:id="@+id/image2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            android:background="@drawable/tajveed"
            android:layout_height="100dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/tajvid_ilmi"
            app:layout_constraintTop_toBottomOf="@id/image2"
            app:layout_constraintRight_toRightOf="@id/image2"
            app:layout_constraintLeft_toLeftOf="@id/image2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>


        <ImageView
            android:contentDescription="@string/something"
            android:layout_width="80dp"
            android:id="@+id/image1"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            android:background="@drawable/tajveed1"
            android:layout_height="80dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/alifbo"
            app:layout_constraintTop_toBottomOf="@id/image1"
            app:layout_constraintRight_toRightOf="@id/image1"
            app:layout_constraintLeft_toLeftOf="@id/image1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>



        <ImageView
            android:contentDescription="@string/something"
            android:layout_width="80dp"
            android:id="@+id/image3"
            android:layout_marginEnd="24dp"
           app:layout_constraintBottom_toBottomOf="@id/guideline"
            android:background="@drawable/tajveed3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="80dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:text="Qur'on"
            app:layout_constraintTop_toBottomOf="@id/image3"
            app:layout_constraintRight_toRightOf="@id/image3"
            app:layout_constraintLeft_toLeftOf="@id/image3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_width="wrap_content"
            android:text="@string/muallimi_soniy_1892"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:layout_margin="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>

            <LinearLayout
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="32dp"
                    android:layout_margin="16dp"
                    android:elevation="5dp"
                    android:layout_height="wrap_content"
                    tools:targetApi="lollipop">


                        <TextView
                            android:padding="12dp"
                            android:gravity="center"
                            android:id="@+id/btn_1"
                            android:background="@drawable/button_back"
                            android:layout_width="match_parent"
                            android:text="@string/harflar"
                            android:textSize="24sp"
                            android:textColor="@color/ink"
                            android:layout_height="wrap_content"/>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="32dp"
                    android:layout_margin="16dp"
                    android:elevation="5dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="12dp"
                        android:gravity="center"
                        android:id="@+id/btn_2"
                        android:background="@drawable/button_back"
                        android:layout_width="match_parent"
                        android:text="@string/tajvid_ilmi"
                        android:textSize="24sp"
                        android:textColor="@color/ink"
                        android:layout_height="wrap_content"/>



                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="32dp"
                    android:layout_margin="16dp"
                    android:elevation="5dp"
                    android:layout_height="wrap_content"
                    tools:ignore="UnusedAttribute">


                    <TextView
                        android:padding="12dp"
                        android:gravity="center"
                        android:id="@+id/btn_3"
                        android:background="@drawable/button_back"
                        android:layout_width="match_parent"
                        android:text="@string/_1_pora_qur_on"
                        android:textSize="24sp"
                        android:textColor="@color/ink"
                        android:layout_height="wrap_content"/>






                </androidx.cardview.widget.CardView>




            </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>